--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit>=1.20.0
 pandas>=2.0.0
 trino>=0.318.0
-urllib3>=1.26.0
+urllib3>=2.0.0
 typing-extensions>=4.5.0
+keyring>=24.2.0
+requests>=2.31.0
 
